[package]
name = "invalid-state-error"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[lib]
name = "invalid_state_error"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.6", features = ["extension-module"] }
pyo3-asyncio = { version = "0.16.0", features = ["tokio-runtime"] }
tokio = { version = "1.14", features = ["time"] }
